--- a/ps/index.html
+++ b/ps/index.html
@@ -11,11 +11,11 @@
     <div class="black">
       <div>
         <div class="question">
-          <h1> Conteúdo SECRETO Disponível! </h1>
+          <h1> Conteúdo Disponível! </h1>
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://protocol0barriga.com.br/pvcc">CONTINUAR</a>
+          <a class="btn" href="">CONTINUAR</a>
         </div>
       </div>    
     </div>
