--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                
       
       © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes. 
-Não garantimos os resultados iguais para todos. Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento. 
+</div>
+Não garantimos os resultados iguais para todos. Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.
+</div>
 Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
   </div>
   <script type="text/javascript" src="script.js"></script>
