--- a/index.html
+++ b/index.html
@@ -33,27 +33,11 @@
       </div>
     </header>
 
-      </div>    
-    </div>
-        </div>
-      </div>    
-    </div>
-        </div>
-      </div>    
-    </div>
-               
-      
-      © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes. 
+      </div      © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes.> 
 
-</div>
+</div Não garantimos os resultados iguais para todos. Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.>
 
-Não garantimos os resultados iguais para todos. Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.
-
-</div>
-
-Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
-
-</div>
+</div Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
