--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       </div>
     </header>
 
-      © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes. Não garantimos os resultados iguais para todos. Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.</p>
-Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+      © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes. Não garantimos os resultados iguais para todos. </p>
+          </p> Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.</p>
+         Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
