--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
             <!-- Termos de Uso e Política de Privacidade -->
-            <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="OutDocument" class="text-white">Aviso Legale</a><a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+            <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="OutDocument" class="text-white">Aviso Legale</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
           </div>
         </div>
       </div>
