--- a/pg_0001.htm
+++ b/pg_0001.htm
@@ -28,7 +28,19 @@
     <div class="container py-5">
       <div class="row justify-content-center">
         <div class="col-lg-8">
-          <h2>1. Aviso Legal </h2>            <p> Aviso Legal O conteúdo publicado neste site é de propriedade da Você na Boa
+          <h2>1. Aviso Legal </h2>            <p> Aviso Legal O conteúdo publicado neste site é de propriedade da Você na Boa e está protegido pelas leis brasileiras e internacionais de direitos autorais. As informações aqui contidas poderão ser utilizadas para fins meramente informativos, não sendo permitida a sua utilização para fins comerciais. 
+
+ 
+ 
+
+A Você na Boa procura fornecer sempre informações precisas e atualizadas, mas não garante e tampouco declara, expressa ou implicitamente, a precisão das informações fornecidas neste site. 
+
+ 
+ 
+
+As informações contidas neste site poderão ser alteradas sem aviso prévio. 
+
+ 
           </div>
     </div>
 
