--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
 </p>  © 2022 – Todos os direitos reservados. Os resultados referentes aos serviços foram avaliados e comprovados por nossos clientes. Não garantimos os resultados iguais para todos.
           Estes variam de pessoa para pessoa dependendo dos diversos fatores individuais. As informações fornecidas neste site destina-se ao conhecimento.
          Todo resultado é de inteira responsabilidade do cliente. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.
+      </div>
+      </div>    
+    </div>
+        </div>
+</div>
+
+Atendimento Através do contato: suporte@vocenaboa.fun
+</p>
+</p>
+</p>
+</p>
+</p>
+CNPJ: 95.455.839/0001-20 // ©2022 - Você na Boa. Todos os direitos reservados. 
+
 
   <script type="text/javascript" src="script.js"></script>
 </body>
