--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://www.metodofro.com/?pv=prol6zg8&af=afizo0nj6" "style.css">
+  <link rel="stylesheet" href="https://www.metodofro.com/?pv=prol6zg8&af=afizo0nj6/style.css">
   <title>Tudo Pronto!</title>
 </head>
 <body> 
