--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://www.metodofro.com/?pv=prol6zg8&af=afizo0nj6/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Tudo Pronto!</title>
 </head>
 <body> 
@@ -15,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="">CONTINUAR</a>
+          <a class="btn" href="https://www.metodofro.com/?pv=prol6zg8&af=afizo0nj6">CONTINUAR</a>
         </div>
       </div>    
     </div>
