--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="https://ev.braip.com/checkout/pla40rmp/che2gxdp">CONTINUAR</a>
+          <a class="btn" href="colocarolinkdobotaoaq">CONTINUAR</a>
         </div>
       </div>    
     </div>
