--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <p>Clique no botão abaixo para continuar</p>
         </div>
         <div class="answer">
-          <a class="btn" href="linkdapagaq">CONTINUAR</a>
+          <a class="btn" href="
+https://linktr.ee/vocenaboa">CONTINUAR</a>
         </div>
       </div>    
     </div>
